--- a/notebooks/phase2_out.ipynb
+++ b/notebooks/phase2_out.ipynb
@@ -6,16 +6,16 @@
    "id": "0bb73213",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:32.284926Z",
-     "iopub.status.busy": "2025-11-02T20:56:32.284516Z",
-     "iopub.status.idle": "2025-11-02T20:56:32.298725Z",
-     "shell.execute_reply": "2025-11-02T20:56:32.297823Z"
+     "iopub.execute_input": "2025-11-03T16:21:07.945212Z",
+     "iopub.status.busy": "2025-11-03T16:21:07.944727Z",
+     "iopub.status.idle": "2025-11-03T16:21:07.957673Z",
+     "shell.execute_reply": "2025-11-03T16:21:07.956927Z"
     },
     "papermill": {
-     "duration": 0.029207,
-     "end_time": "2025-11-02T20:56:32.301183",
+     "duration": 0.02576,
+     "end_time": "2025-11-03T16:21:07.959801",
      "exception": false,
-     "start_time": "2025-11-02T20:56:32.271976",
+     "start_time": "2025-11-03T16:21:07.934041",
      "status": "completed"
     },
     "tags": []
@@ -77,16 +77,16 @@
    "id": "37f28ddd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:32.321276Z",
-     "iopub.status.busy": "2025-11-02T20:56:32.320965Z",
-     "iopub.status.idle": "2025-11-02T20:56:37.615989Z",
-     "shell.execute_reply": "2025-11-02T20:56:37.615180Z"
+     "iopub.execute_input": "2025-11-03T16:21:07.978448Z",
+     "iopub.status.busy": "2025-11-03T16:21:07.978175Z",
+     "iopub.status.idle": "2025-11-03T16:21:12.043853Z",
+     "shell.execute_reply": "2025-11-03T16:21:12.043259Z"
     },
     "papermill": {
-     "duration": 5.306271,
-     "end_time": "2025-11-02T20:56:37.617488",
+     "duration": 4.076373,
+     "end_time": "2025-11-03T16:21:12.045340",
      "exception": false,
-     "start_time": "2025-11-02T20:56:32.311217",
+     "start_time": "2025-11-03T16:21:07.968967",
      "status": "completed"
     },
     "tags": []
@@ -107,7 +107,7 @@
       "\n",
       "🚀 RETAILSENSE PHASE 2: FEATURE ENGINEERING & MODELS INITIATED\n",
       "============================================================\n",
-      "📅 Started at: 2025-11-03 02:26:37\n"
+      "📅 Started at: 2025-11-03 21:51:12\n"
      ]
     }
    ],
@@ -173,16 +173,16 @@
    "id": "0c32e7e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:37.637099Z",
-     "iopub.status.busy": "2025-11-02T20:56:37.636424Z",
-     "iopub.status.idle": "2025-11-02T20:56:37.657716Z",
-     "shell.execute_reply": "2025-11-02T20:56:37.656993Z"
+     "iopub.execute_input": "2025-11-03T16:21:12.067106Z",
+     "iopub.status.busy": "2025-11-03T16:21:12.066266Z",
+     "iopub.status.idle": "2025-11-03T16:21:12.087127Z",
+     "shell.execute_reply": "2025-11-03T16:21:12.086265Z"
     },
     "papermill": {
-     "duration": 0.03274,
-     "end_time": "2025-11-02T20:56:37.659778",
+     "duration": 0.032748,
+     "end_time": "2025-11-03T16:21:12.088659",
      "exception": false,
-     "start_time": "2025-11-02T20:56:37.627038",
+     "start_time": "2025-11-03T16:21:12.055911",
      "status": "completed"
     },
     "tags": []
@@ -357,16 +357,16 @@
    "id": "ab54005e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:37.679510Z",
-     "iopub.status.busy": "2025-11-02T20:56:37.679239Z",
-     "iopub.status.idle": "2025-11-02T20:56:37.951632Z",
-     "shell.execute_reply": "2025-11-02T20:56:37.950863Z"
+     "iopub.execute_input": "2025-11-03T16:21:12.108614Z",
+     "iopub.status.busy": "2025-11-03T16:21:12.108335Z",
+     "iopub.status.idle": "2025-11-03T16:21:12.375079Z",
+     "shell.execute_reply": "2025-11-03T16:21:12.374288Z"
     },
     "papermill": {
-     "duration": 0.284447,
-     "end_time": "2025-11-02T20:56:37.953085",
+     "duration": 0.27877,
+     "end_time": "2025-11-03T16:21:12.376584",
      "exception": false,
-     "start_time": "2025-11-02T20:56:37.668638",
+     "start_time": "2025-11-03T16:21:12.097814",
      "status": "completed"
     },
     "tags": []
@@ -404,7 +404,13 @@
      "output_type": "stream",
      "text": [
       "✅ Created 6 price-related features\n",
-      "🔄 Creating inventory features...\n",
+      "🔄 Creating inventory features...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Created 6 inventory features\n",
       "🔄 Encoding categorical features...\n",
       "✅ Created 6 categorical features\n",
@@ -487,16 +493,16 @@
    "id": "3593d065",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:37.976588Z",
-     "iopub.status.busy": "2025-11-02T20:56:37.976070Z",
-     "iopub.status.idle": "2025-11-02T20:56:39.999707Z",
-     "shell.execute_reply": "2025-11-02T20:56:39.998931Z"
+     "iopub.execute_input": "2025-11-03T16:21:12.398233Z",
+     "iopub.status.busy": "2025-11-03T16:21:12.397847Z",
+     "iopub.status.idle": "2025-11-03T16:21:13.711736Z",
+     "shell.execute_reply": "2025-11-03T16:21:13.710518Z"
     },
     "papermill": {
-     "duration": 2.036999,
-     "end_time": "2025-11-02T20:56:40.001159",
+     "duration": 1.325666,
+     "end_time": "2025-11-03T16:21:13.713109",
      "exception": false,
-     "start_time": "2025-11-02T20:56:37.964160",
+     "start_time": "2025-11-03T16:21:12.387443",
      "status": "completed"
     },
     "tags": []
@@ -528,14 +534,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "02:26:38 - cmdstanpy - INFO - Chain [1] start processing\n"
+      "21:51:12 - cmdstanpy - INFO - Chain [1] start processing\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "02:26:38 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "21:51:12 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -626,16 +632,16 @@
    "id": "d65995cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:40.026323Z",
-     "iopub.status.busy": "2025-11-02T20:56:40.025555Z",
-     "iopub.status.idle": "2025-11-02T20:56:43.112917Z",
-     "shell.execute_reply": "2025-11-02T20:56:43.112090Z"
+     "iopub.execute_input": "2025-11-03T16:21:13.739019Z",
+     "iopub.status.busy": "2025-11-03T16:21:13.738531Z",
+     "iopub.status.idle": "2025-11-03T16:21:16.817481Z",
+     "shell.execute_reply": "2025-11-03T16:21:16.816235Z"
     },
     "papermill": {
-     "duration": 3.101361,
-     "end_time": "2025-11-02T20:56:43.114597",
+     "duration": 3.0934,
+     "end_time": "2025-11-03T16:21:16.819199",
      "exception": false,
-     "start_time": "2025-11-02T20:56:40.013236",
+     "start_time": "2025-11-03T16:21:13.725799",
      "status": "completed"
     },
     "tags": []
@@ -765,16 +771,16 @@
    "id": "53d39ac0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:43.158279Z",
-     "iopub.status.busy": "2025-11-02T20:56:43.157858Z",
-     "iopub.status.idle": "2025-11-02T20:56:44.936807Z",
-     "shell.execute_reply": "2025-11-02T20:56:44.935920Z"
+     "iopub.execute_input": "2025-11-03T16:21:16.862366Z",
+     "iopub.status.busy": "2025-11-03T16:21:16.861955Z",
+     "iopub.status.idle": "2025-11-03T16:21:18.840174Z",
+     "shell.execute_reply": "2025-11-03T16:21:18.839376Z"
     },
     "papermill": {
-     "duration": 1.801963,
-     "end_time": "2025-11-02T20:56:44.938328",
+     "duration": 2.001275,
+     "end_time": "2025-11-03T16:21:18.841720",
      "exception": false,
-     "start_time": "2025-11-02T20:56:43.136365",
+     "start_time": "2025-11-03T16:21:16.840445",
      "status": "completed"
     },
     "tags": []
@@ -898,16 +904,16 @@
    "id": "76fdf3a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:44.966873Z",
-     "iopub.status.busy": "2025-11-02T20:56:44.966504Z",
-     "iopub.status.idle": "2025-11-02T20:56:45.542626Z",
-     "shell.execute_reply": "2025-11-02T20:56:45.541514Z"
+     "iopub.execute_input": "2025-11-03T16:21:18.869814Z",
+     "iopub.status.busy": "2025-11-03T16:21:18.869504Z",
+     "iopub.status.idle": "2025-11-03T16:21:19.439050Z",
+     "shell.execute_reply": "2025-11-03T16:21:19.438282Z"
     },
     "papermill": {
-     "duration": 0.592517,
-     "end_time": "2025-11-02T20:56:45.544484",
+     "duration": 0.584929,
+     "end_time": "2025-11-03T16:21:19.440339",
      "exception": false,
-     "start_time": "2025-11-02T20:56:44.951967",
+     "start_time": "2025-11-03T16:21:18.855410",
      "status": "completed"
     },
     "tags": []
@@ -1017,16 +1023,16 @@
    "id": "2ee80b0b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:45.573911Z",
-     "iopub.status.busy": "2025-11-02T20:56:45.573625Z",
-     "iopub.status.idle": "2025-11-02T20:56:45.629230Z",
-     "shell.execute_reply": "2025-11-02T20:56:45.628439Z"
+     "iopub.execute_input": "2025-11-03T16:21:19.468787Z",
+     "iopub.status.busy": "2025-11-03T16:21:19.468488Z",
+     "iopub.status.idle": "2025-11-03T16:21:19.499294Z",
+     "shell.execute_reply": "2025-11-03T16:21:19.498496Z"
     },
     "papermill": {
-     "duration": 0.072122,
-     "end_time": "2025-11-02T20:56:45.630791",
+     "duration": 0.047669,
+     "end_time": "2025-11-03T16:21:19.501782",
      "exception": false,
-     "start_time": "2025-11-02T20:56:45.558669",
+     "start_time": "2025-11-03T16:21:19.454113",
      "status": "completed"
     },
     "tags": []
@@ -1137,16 +1143,16 @@
    "id": "6ad9e16b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:45.679653Z",
-     "iopub.status.busy": "2025-11-02T20:56:45.679263Z",
-     "iopub.status.idle": "2025-11-02T20:56:45.693623Z",
-     "shell.execute_reply": "2025-11-02T20:56:45.692699Z"
+     "iopub.execute_input": "2025-11-03T16:21:19.550999Z",
+     "iopub.status.busy": "2025-11-03T16:21:19.550519Z",
+     "iopub.status.idle": "2025-11-03T16:21:19.564541Z",
+     "shell.execute_reply": "2025-11-03T16:21:19.563791Z"
     },
     "papermill": {
-     "duration": 0.040954,
-     "end_time": "2025-11-02T20:56:45.695344",
+     "duration": 0.040235,
+     "end_time": "2025-11-03T16:21:19.566163",
      "exception": false,
-     "start_time": "2025-11-02T20:56:45.654390",
+     "start_time": "2025-11-03T16:21:19.525928",
      "status": "completed"
     },
     "tags": []
@@ -1287,16 +1293,16 @@
    "id": "a59e9d17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:45.738677Z",
-     "iopub.status.busy": "2025-11-02T20:56:45.738407Z",
-     "iopub.status.idle": "2025-11-02T20:56:45.748199Z",
-     "shell.execute_reply": "2025-11-02T20:56:45.747390Z"
+     "iopub.execute_input": "2025-11-03T16:21:19.606720Z",
+     "iopub.status.busy": "2025-11-03T16:21:19.606434Z",
+     "iopub.status.idle": "2025-11-03T16:21:19.615407Z",
+     "shell.execute_reply": "2025-11-03T16:21:19.614551Z"
     },
     "papermill": {
-     "duration": 0.028521,
-     "end_time": "2025-11-02T20:56:45.749565",
+     "duration": 0.026378,
+     "end_time": "2025-11-03T16:21:19.616955",
      "exception": false,
-     "start_time": "2025-11-02T20:56:45.721044",
+     "start_time": "2025-11-03T16:21:19.590577",
      "status": "completed"
     },
     "tags": []
@@ -1319,7 +1325,7 @@
       "🎉 ALL VALIDATIONS PASSED! ✅\n",
       "🚀 Ready to proceed to Phase 3: Business Layer & Dashboard\n",
       "------------------------------------------------------------\n",
-      "📅 Validation completed at: 2025-11-03 02:26:45\n",
+      "📅 Validation completed at: 2025-11-03 21:51:19\n",
       "\n"
      ]
     }
@@ -1434,14 +1440,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 17.938502,
-   "end_time": "2025-11-02T20:56:47.389022",
+   "duration": 15.702912,
+   "end_time": "2025-11-03T16:21:21.037623",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase2_core_models.ipynb",
    "output_path": "F:\\RetailSense_Lite\\notebooks\\phase2_out.ipynb",
    "parameters": {},
-   "start_time": "2025-11-02T20:56:29.450520",
+   "start_time": "2025-11-03T16:21:05.334711",
    "version": "2.6.0"
   }
  },
