--- a/notebooks/phase3_out.ipynb
+++ b/notebooks/phase3_out.ipynb
@@ -6,16 +6,16 @@
    "id": "3f4772bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:54.687892Z",
-     "iopub.status.busy": "2025-11-02T20:56:54.687568Z",
-     "iopub.status.idle": "2025-11-02T20:56:57.829520Z",
-     "shell.execute_reply": "2025-11-02T20:56:57.828724Z"
+     "iopub.execute_input": "2025-11-03T16:21:28.496358Z",
+     "iopub.status.busy": "2025-11-03T16:21:28.496022Z",
+     "iopub.status.idle": "2025-11-03T16:21:31.387267Z",
+     "shell.execute_reply": "2025-11-03T16:21:31.386507Z"
     },
     "papermill": {
-     "duration": 3.154999,
-     "end_time": "2025-11-02T20:56:57.831905",
+     "duration": 2.904531,
+     "end_time": "2025-11-03T16:21:31.389422",
      "exception": false,
-     "start_time": "2025-11-02T20:56:54.676906",
+     "start_time": "2025-11-03T16:21:28.484891",
      "status": "completed"
     },
     "tags": []
@@ -28,7 +28,7 @@
       "🧹 Phase 3 outputs cleared\n",
       "🚀 RETAILSENSE PHASE 3: BUSINESS LAYER & INSIGHTS\n",
       "============================================================\n",
-      "📅 Started: 2025-11-03 02:26:57\n",
+      "📅 Started: 2025-11-03 21:51:31\n",
       "🎯 Goal: Convert ML predictions & anomalies into actionable business insights\n",
       "📂 Processed Data Path: F:\\RetailSense_Lite\\data\\processed\\data_with_all_features.csv\n",
       "📂 Outputs Directory: F:\\RetailSense_Lite\\outputs\n",
@@ -124,16 +124,16 @@
    "id": "39570279",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:57.855774Z",
-     "iopub.status.busy": "2025-11-02T20:56:57.855180Z",
-     "iopub.status.idle": "2025-11-02T20:56:57.885492Z",
-     "shell.execute_reply": "2025-11-02T20:56:57.884478Z"
+     "iopub.execute_input": "2025-11-03T16:21:31.409098Z",
+     "iopub.status.busy": "2025-11-03T16:21:31.408632Z",
+     "iopub.status.idle": "2025-11-03T16:21:31.434002Z",
+     "shell.execute_reply": "2025-11-03T16:21:31.432894Z"
     },
     "papermill": {
-     "duration": 0.043965,
-     "end_time": "2025-11-02T20:56:57.887366",
+     "duration": 0.037108,
+     "end_time": "2025-11-03T16:21:31.435657",
      "exception": false,
-     "start_time": "2025-11-02T20:56:57.843401",
+     "start_time": "2025-11-03T16:21:31.398549",
      "status": "completed"
     },
     "tags": []
@@ -207,16 +207,16 @@
    "id": "e1783feb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:57.911001Z",
-     "iopub.status.busy": "2025-11-02T20:56:57.910718Z",
-     "iopub.status.idle": "2025-11-02T20:56:57.931723Z",
-     "shell.execute_reply": "2025-11-02T20:56:57.930904Z"
+     "iopub.execute_input": "2025-11-03T16:21:31.454826Z",
+     "iopub.status.busy": "2025-11-03T16:21:31.454435Z",
+     "iopub.status.idle": "2025-11-03T16:21:31.473241Z",
+     "shell.execute_reply": "2025-11-03T16:21:31.472478Z"
     },
     "papermill": {
-     "duration": 0.033746,
-     "end_time": "2025-11-02T20:56:57.933309",
+     "duration": 0.029539,
+     "end_time": "2025-11-03T16:21:31.474704",
      "exception": false,
-     "start_time": "2025-11-02T20:56:57.899563",
+     "start_time": "2025-11-03T16:21:31.445165",
      "status": "completed"
     },
     "tags": []
@@ -327,16 +327,16 @@
    "id": "9ba1765f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:57.956440Z",
-     "iopub.status.busy": "2025-11-02T20:56:57.956173Z",
-     "iopub.status.idle": "2025-11-02T20:56:57.988382Z",
-     "shell.execute_reply": "2025-11-02T20:56:57.987556Z"
+     "iopub.execute_input": "2025-11-03T16:21:31.494646Z",
+     "iopub.status.busy": "2025-11-03T16:21:31.494371Z",
+     "iopub.status.idle": "2025-11-03T16:21:31.522699Z",
+     "shell.execute_reply": "2025-11-03T16:21:31.521961Z"
     },
     "papermill": {
-     "duration": 0.043568,
-     "end_time": "2025-11-02T20:56:57.989758",
+     "duration": 0.039833,
+     "end_time": "2025-11-03T16:21:31.524033",
      "exception": false,
-     "start_time": "2025-11-02T20:56:57.946190",
+     "start_time": "2025-11-03T16:21:31.484200",
      "status": "completed"
     },
     "tags": []
@@ -412,16 +412,16 @@
    "id": "895f1e04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:58.015647Z",
-     "iopub.status.busy": "2025-11-02T20:56:58.015257Z",
-     "iopub.status.idle": "2025-11-02T20:56:58.051606Z",
-     "shell.execute_reply": "2025-11-02T20:56:58.050862Z"
+     "iopub.execute_input": "2025-11-03T16:21:31.543747Z",
+     "iopub.status.busy": "2025-11-03T16:21:31.543339Z",
+     "iopub.status.idle": "2025-11-03T16:21:31.572682Z",
+     "shell.execute_reply": "2025-11-03T16:21:31.571945Z"
     },
     "papermill": {
-     "duration": 0.050898,
-     "end_time": "2025-11-02T20:56:58.053157",
+     "duration": 0.041436,
+     "end_time": "2025-11-03T16:21:31.574015",
      "exception": false,
-     "start_time": "2025-11-02T20:56:58.002259",
+     "start_time": "2025-11-03T16:21:31.532579",
      "status": "completed"
     },
     "tags": []
@@ -434,13 +434,7 @@
       "\n",
       "📊 STEP 5: DETECTING SALES ANOMALIES\n",
       "-------------------------------------------------------\n",
-      "📊 No ML anomaly flags found, using statistical detection...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "📊 No ML anomaly flags found, using statistical detection...\n",
       "✅ No anomalies detected. Placeholder record created.\n"
      ]
     }
@@ -531,16 +525,16 @@
    "id": "0f72e13a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:58.077777Z",
-     "iopub.status.busy": "2025-11-02T20:56:58.077328Z",
-     "iopub.status.idle": "2025-11-02T20:56:58.097933Z",
-     "shell.execute_reply": "2025-11-02T20:56:58.097157Z"
+     "iopub.execute_input": "2025-11-03T16:21:31.593206Z",
+     "iopub.status.busy": "2025-11-03T16:21:31.592843Z",
+     "iopub.status.idle": "2025-11-03T16:21:31.610048Z",
+     "shell.execute_reply": "2025-11-03T16:21:31.609311Z"
     },
     "papermill": {
-     "duration": 0.034286,
-     "end_time": "2025-11-02T20:56:58.099382",
+     "duration": 0.028726,
+     "end_time": "2025-11-03T16:21:31.611413",
      "exception": false,
-     "start_time": "2025-11-02T20:56:58.065096",
+     "start_time": "2025-11-03T16:21:31.582687",
      "status": "completed"
     },
     "tags": []
@@ -629,16 +623,16 @@
    "id": "863f34ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:58.126663Z",
-     "iopub.status.busy": "2025-11-02T20:56:58.126033Z",
-     "iopub.status.idle": "2025-11-02T20:56:58.146663Z",
-     "shell.execute_reply": "2025-11-02T20:56:58.145692Z"
+     "iopub.execute_input": "2025-11-03T16:21:31.633619Z",
+     "iopub.status.busy": "2025-11-03T16:21:31.632915Z",
+     "iopub.status.idle": "2025-11-03T16:21:31.652499Z",
+     "shell.execute_reply": "2025-11-03T16:21:31.651740Z"
     },
     "papermill": {
-     "duration": 0.035147,
-     "end_time": "2025-11-02T20:56:58.148265",
+     "duration": 0.031613,
+     "end_time": "2025-11-03T16:21:31.653968",
      "exception": false,
-     "start_time": "2025-11-02T20:56:58.113118",
+     "start_time": "2025-11-03T16:21:31.622355",
      "status": "completed"
     },
     "tags": []
@@ -710,16 +704,16 @@
    "id": "45fba3c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:58.173976Z",
-     "iopub.status.busy": "2025-11-02T20:56:58.173550Z",
-     "iopub.status.idle": "2025-11-02T20:56:59.751278Z",
-     "shell.execute_reply": "2025-11-02T20:56:59.750528Z"
+     "iopub.execute_input": "2025-11-03T16:21:31.677189Z",
+     "iopub.status.busy": "2025-11-03T16:21:31.676916Z",
+     "iopub.status.idle": "2025-11-03T16:21:33.093373Z",
+     "shell.execute_reply": "2025-11-03T16:21:33.092479Z"
     },
     "papermill": {
-     "duration": 1.592942,
-     "end_time": "2025-11-02T20:56:59.752732",
+     "duration": 1.431084,
+     "end_time": "2025-11-03T16:21:33.094953",
      "exception": false,
-     "start_time": "2025-11-02T20:56:58.159790",
+     "start_time": "2025-11-03T16:21:31.663869",
      "status": "completed"
     },
     "tags": []
@@ -834,16 +828,16 @@
    "id": "979d4c19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:59.786675Z",
-     "iopub.status.busy": "2025-11-02T20:56:59.786289Z",
-     "iopub.status.idle": "2025-11-02T20:56:59.802575Z",
-     "shell.execute_reply": "2025-11-02T20:56:59.801671Z"
+     "iopub.execute_input": "2025-11-03T16:21:33.120000Z",
+     "iopub.status.busy": "2025-11-03T16:21:33.119724Z",
+     "iopub.status.idle": "2025-11-03T16:21:33.134577Z",
+     "shell.execute_reply": "2025-11-03T16:21:33.133743Z"
     },
     "papermill": {
-     "duration": 0.036331,
-     "end_time": "2025-11-02T20:56:59.804191",
+     "duration": 0.028336,
+     "end_time": "2025-11-03T16:21:33.135937",
      "exception": false,
-     "start_time": "2025-11-02T20:56:59.767860",
+     "start_time": "2025-11-03T16:21:33.107601",
      "status": "completed"
     },
     "tags": []
@@ -924,16 +918,16 @@
    "id": "84b27ea8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:59.837363Z",
-     "iopub.status.busy": "2025-11-02T20:56:59.836921Z",
-     "iopub.status.idle": "2025-11-02T20:56:59.848245Z",
-     "shell.execute_reply": "2025-11-02T20:56:59.847674Z"
+     "iopub.execute_input": "2025-11-03T16:21:33.158660Z",
+     "iopub.status.busy": "2025-11-03T16:21:33.158381Z",
+     "iopub.status.idle": "2025-11-03T16:21:33.167151Z",
+     "shell.execute_reply": "2025-11-03T16:21:33.165883Z"
     },
     "papermill": {
-     "duration": 0.032004,
-     "end_time": "2025-11-02T20:56:59.849708",
+     "duration": 0.022206,
+     "end_time": "2025-11-03T16:21:33.168752",
      "exception": false,
-     "start_time": "2025-11-02T20:56:59.817704",
+     "start_time": "2025-11-03T16:21:33.146546",
      "status": "completed"
     },
     "tags": []
@@ -947,7 +941,7 @@
       "======================================================================\n",
       "🎯 PHASE 3: BUSINESS LAYER & INSIGHTS COMPLETED!\n",
       "======================================================================\n",
-      "📅 Completed: 2025-11-03 02:26:59\n",
+      "📅 Completed: 2025-11-03 21:51:33\n",
       "\n",
       "✅ DELIVERABLES GENERATED (saved in 'F:\\RetailSense_Lite\\outputs'):\n",
       "   📊 Executive Dashboard: F:\\RetailSense_Lite\\outputs\\executive_dashboard.png\n",
@@ -1035,14 +1029,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.993489,
-   "end_time": "2025-11-02T20:57:00.975871",
+   "duration": 8.740936,
+   "end_time": "2025-11-03T16:21:34.602754",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase3.ipynb",
    "output_path": "F:\\RetailSense_Lite\\notebooks\\phase3_out.ipynb",
    "parameters": {},
-   "start_time": "2025-11-02T20:56:51.982382",
+   "start_time": "2025-11-03T16:21:25.861818",
    "version": "2.6.0"
   }
  },
