--- a/notebooks/phase1_out.ipynb
+++ b/notebooks/phase1_out.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fec83250",
+   "id": "b0b0b7c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:17.308157Z",
-     "iopub.status.busy": "2025-11-02T20:56:17.307623Z",
-     "iopub.status.idle": "2025-11-02T20:56:17.313058Z",
-     "shell.execute_reply": "2025-11-02T20:56:17.312150Z"
+     "iopub.execute_input": "2025-11-03T16:20:54.708708Z",
+     "iopub.status.busy": "2025-11-03T16:20:54.708416Z",
+     "iopub.status.idle": "2025-11-03T16:20:54.712757Z",
+     "shell.execute_reply": "2025-11-03T16:20:54.712213Z"
     },
     "papermill": {
-     "duration": 0.01691,
-     "end_time": "2025-11-02T20:56:17.315585",
+     "duration": 0.018222,
+     "end_time": "2025-11-03T16:20:54.714999",
      "exception": false,
-     "start_time": "2025-11-02T20:56:17.298675",
+     "start_time": "2025-11-03T16:20:54.696777",
      "status": "completed"
     },
     "tags": [
@@ -35,16 +35,16 @@
    "id": "e29117f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:17.341660Z",
-     "iopub.status.busy": "2025-11-02T20:56:17.341209Z",
-     "iopub.status.idle": "2025-11-02T20:56:17.355212Z",
-     "shell.execute_reply": "2025-11-02T20:56:17.354386Z"
+     "iopub.execute_input": "2025-11-03T16:20:54.739989Z",
+     "iopub.status.busy": "2025-11-03T16:20:54.739510Z",
+     "iopub.status.idle": "2025-11-03T16:20:54.752415Z",
+     "shell.execute_reply": "2025-11-03T16:20:54.751672Z"
     },
     "papermill": {
-     "duration": 0.023942,
-     "end_time": "2025-11-02T20:56:17.356854",
+     "duration": 0.023464,
+     "end_time": "2025-11-03T16:20:54.753701",
      "exception": false,
-     "start_time": "2025-11-02T20:56:17.332912",
+     "start_time": "2025-11-03T16:20:54.730237",
      "status": "completed"
     },
     "tags": []
@@ -126,16 +126,16 @@
    "id": "e074c1b7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:17.378495Z",
-     "iopub.status.busy": "2025-11-02T20:56:17.378033Z",
-     "iopub.status.idle": "2025-11-02T20:56:21.645167Z",
-     "shell.execute_reply": "2025-11-02T20:56:21.644348Z"
+     "iopub.execute_input": "2025-11-03T16:20:54.771085Z",
+     "iopub.status.busy": "2025-11-03T16:20:54.770809Z",
+     "iopub.status.idle": "2025-11-03T16:20:57.936292Z",
+     "shell.execute_reply": "2025-11-03T16:20:57.935495Z"
     },
     "papermill": {
-     "duration": 4.278571,
-     "end_time": "2025-11-02T20:56:21.646536",
+     "duration": 3.17629,
+     "end_time": "2025-11-03T16:20:57.937730",
      "exception": false,
-     "start_time": "2025-11-02T20:56:17.367965",
+     "start_time": "2025-11-03T16:20:54.761440",
      "status": "completed"
     },
     "tags": []
@@ -191,16 +191,16 @@
    "id": "e509235a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:21.665723Z",
-     "iopub.status.busy": "2025-11-02T20:56:21.665438Z",
-     "iopub.status.idle": "2025-11-02T20:56:21.678939Z",
-     "shell.execute_reply": "2025-11-02T20:56:21.678163Z"
+     "iopub.execute_input": "2025-11-03T16:20:57.957112Z",
+     "iopub.status.busy": "2025-11-03T16:20:57.956738Z",
+     "iopub.status.idle": "2025-11-03T16:20:57.969740Z",
+     "shell.execute_reply": "2025-11-03T16:20:57.969005Z"
     },
     "papermill": {
-     "duration": 0.025118,
-     "end_time": "2025-11-02T20:56:21.680222",
+     "duration": 0.02487,
+     "end_time": "2025-11-03T16:20:57.971054",
      "exception": false,
-     "start_time": "2025-11-02T20:56:21.655104",
+     "start_time": "2025-11-03T16:20:57.946184",
      "status": "completed"
     },
     "tags": []
@@ -277,16 +277,16 @@
    "id": "eb42de2c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:21.702630Z",
-     "iopub.status.busy": "2025-11-02T20:56:21.702196Z",
-     "iopub.status.idle": "2025-11-02T20:56:21.775411Z",
-     "shell.execute_reply": "2025-11-02T20:56:21.774376Z"
+     "iopub.execute_input": "2025-11-03T16:20:57.991731Z",
+     "iopub.status.busy": "2025-11-03T16:20:57.991451Z",
+     "iopub.status.idle": "2025-11-03T16:20:58.051319Z",
+     "shell.execute_reply": "2025-11-03T16:20:58.050463Z"
     },
     "papermill": {
-     "duration": 0.087151,
-     "end_time": "2025-11-02T20:56:21.777018",
+     "duration": 0.072775,
+     "end_time": "2025-11-03T16:20:58.052621",
      "exception": false,
-     "start_time": "2025-11-02T20:56:21.689867",
+     "start_time": "2025-11-03T16:20:57.979846",
      "status": "completed"
     },
     "tags": []
@@ -425,16 +425,16 @@
    "id": "366997fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:21.800400Z",
-     "iopub.status.busy": "2025-11-02T20:56:21.800113Z",
-     "iopub.status.idle": "2025-11-02T20:56:21.820103Z",
-     "shell.execute_reply": "2025-11-02T20:56:21.819363Z"
+     "iopub.execute_input": "2025-11-03T16:20:58.073877Z",
+     "iopub.status.busy": "2025-11-03T16:20:58.073505Z",
+     "iopub.status.idle": "2025-11-03T16:20:58.094390Z",
+     "shell.execute_reply": "2025-11-03T16:20:58.093545Z"
     },
     "papermill": {
-     "duration": 0.035196,
-     "end_time": "2025-11-02T20:56:21.821529",
+     "duration": 0.034098,
+     "end_time": "2025-11-03T16:20:58.096256",
      "exception": false,
-     "start_time": "2025-11-02T20:56:21.786333",
+     "start_time": "2025-11-03T16:20:58.062158",
      "status": "completed"
     },
     "tags": []
@@ -511,16 +511,16 @@
    "id": "95ec9e79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:21.844109Z",
-     "iopub.status.busy": "2025-11-02T20:56:21.843670Z",
-     "iopub.status.idle": "2025-11-02T20:56:21.891984Z",
-     "shell.execute_reply": "2025-11-02T20:56:21.891018Z"
+     "iopub.execute_input": "2025-11-03T16:20:58.127718Z",
+     "iopub.status.busy": "2025-11-03T16:20:58.127255Z",
+     "iopub.status.idle": "2025-11-03T16:20:58.175026Z",
+     "shell.execute_reply": "2025-11-03T16:20:58.174484Z"
     },
     "papermill": {
-     "duration": 0.061709,
-     "end_time": "2025-11-02T20:56:21.893741",
+     "duration": 0.060363,
+     "end_time": "2025-11-03T16:20:58.176359",
      "exception": false,
-     "start_time": "2025-11-02T20:56:21.832032",
+     "start_time": "2025-11-03T16:20:58.115996",
      "status": "completed"
     },
     "tags": []
@@ -532,13 +532,7 @@
      "text": [
       "🔧 DATA PREPROCESSING\n",
       "========================================\n",
-      "📂 Loading intermediate dataset from Cell 3 (raw2.csv)...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "📂 Loading intermediate dataset from Cell 3 (raw2.csv)...\n",
       "✅ Preprocessing complete!\n",
       "📊 Final shape: (525, 26)\n",
       "💾 Cleaned dataset saved at: F:\\RetailSense_Lite\\data\\processed\\cleaned_data.csv\n"
@@ -605,16 +599,16 @@
    "id": "d8eeb4b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:21.917331Z",
-     "iopub.status.busy": "2025-11-02T20:56:21.916970Z",
-     "iopub.status.idle": "2025-11-02T20:56:22.675970Z",
-     "shell.execute_reply": "2025-11-02T20:56:22.674733Z"
+     "iopub.execute_input": "2025-11-03T16:20:58.197345Z",
+     "iopub.status.busy": "2025-11-03T16:20:58.197068Z",
+     "iopub.status.idle": "2025-11-03T16:20:58.913097Z",
+     "shell.execute_reply": "2025-11-03T16:20:58.912328Z"
     },
     "papermill": {
-     "duration": 0.773924,
-     "end_time": "2025-11-02T20:56:22.677724",
+     "duration": 0.727972,
+     "end_time": "2025-11-03T16:20:58.914654",
      "exception": false,
-     "start_time": "2025-11-02T20:56:21.903800",
+     "start_time": "2025-11-03T16:20:58.186682",
      "status": "completed"
     },
     "tags": []
@@ -752,16 +746,16 @@
    "id": "e3f12636",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:22.703080Z",
-     "iopub.status.busy": "2025-11-02T20:56:22.702800Z",
-     "iopub.status.idle": "2025-11-02T20:56:22.730691Z",
-     "shell.execute_reply": "2025-11-02T20:56:22.729944Z"
+     "iopub.execute_input": "2025-11-03T16:20:58.938973Z",
+     "iopub.status.busy": "2025-11-03T16:20:58.938711Z",
+     "iopub.status.idle": "2025-11-03T16:20:58.965618Z",
+     "shell.execute_reply": "2025-11-03T16:20:58.964912Z"
     },
     "papermill": {
-     "duration": 0.044276,
-     "end_time": "2025-11-02T20:56:22.732150",
+     "duration": 0.041828,
+     "end_time": "2025-11-03T16:20:58.967712",
      "exception": false,
-     "start_time": "2025-11-02T20:56:22.687874",
+     "start_time": "2025-11-03T16:20:58.925884",
      "status": "completed"
     },
     "tags": []
@@ -954,16 +948,16 @@
    "id": "9b58bc29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T20:56:22.757968Z",
-     "iopub.status.busy": "2025-11-02T20:56:22.757419Z",
-     "iopub.status.idle": "2025-11-02T20:56:23.245565Z",
-     "shell.execute_reply": "2025-11-02T20:56:23.244761Z"
+     "iopub.execute_input": "2025-11-03T16:20:58.992033Z",
+     "iopub.status.busy": "2025-11-03T16:20:58.991763Z",
+     "iopub.status.idle": "2025-11-03T16:20:59.455217Z",
+     "shell.execute_reply": "2025-11-03T16:20:59.454379Z"
     },
     "papermill": {
-     "duration": 0.502541,
-     "end_time": "2025-11-02T20:56:23.246992",
+     "duration": 0.478441,
+     "end_time": "2025-11-03T16:20:59.456952",
      "exception": false,
-     "start_time": "2025-11-02T20:56:22.744451",
+     "start_time": "2025-11-03T16:20:58.978511",
      "status": "completed"
     },
     "tags": []
@@ -1176,8 +1170,8 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.497733,
-   "end_time": "2025-11-02T20:56:24.596094",
+   "duration": 8.715688,
+   "end_time": "2025-11-03T16:21:00.653532",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase1_eda.ipynb",
@@ -1186,7 +1180,7 @@
     "INPUT_CSV": "F:\\RetailSense_Lite\\data\\uploaded\\uploaded_data.csv",
     "RETAILSENSE_BASE_DIR": "F:\\RetailSense_Lite"
    },
-   "start_time": "2025-11-02T20:56:14.098361",
+   "start_time": "2025-11-03T16:20:51.937844",
    "version": "2.6.0"
   }
  },
